test/e2e/testing-manifests/ingress/http/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echomap
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: echoheadersx
          servicePort: 80
  - host: bar.baz.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: echoheadersy
          servicePort: 80
      - path: /foo
        backend:
          serviceName: echoheadersx
          servicePort: 80
